Тесты на удаление и очистку задач.